close to completion

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                         <p class="questrial fs-7 p-0 m-0 px-1">OR</p>
                         <a class="raleway-bold fs-7 text-decoration-none text-black hoverItem" href="#">REGISTER</a>
                     </div>
-                    <div class="dropdown raleway-bold py-2 px-4 m-0 border-end d-flex align-items-center">
+                    <div class="dropdown-center raleway-bold py-2 px-4 m-0 border-end d-flex align-items-center">
                         <a aria-expanded="false" class="btn border-0 dropdown-toggle hoverItem fs-9" data-bs-toggle="dropdown"
                            href="#" role="button">
                             EN
                         </a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu text-center rounded-0">
                             <li><a class="dropdown-item hoverItem fs-9" href="#">FR</a></li>
                             <li><a class="dropdown-item hoverItem fs-9" href="#">RU</a></li>
                             <li><a class="dropdown-item hoverItem fs-9" href="#">IT</a></li>
@@ -170,8 +170,8 @@
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseOCOne">
                                 <div class="accordion-body d-flex flex-column">
-                                    <a href="#">LAPTOPS</a>
-                                    <a href="#">COMPUTERS</a>
+                                    <a class="hoverItem" href="#">LAPTOPS</a>
+                                    <a class="hoverItem" href="#">COMPUTERS</a>
                                 </div>
                             </div>
                         </div>
@@ -186,8 +186,8 @@
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseOCTwo">
                                 <div class="accordion-body d-flex flex-column">
-                                    <a href="#">VIDEO CAMERAS</a>
-                                    <a href="#">PHOTO CAMERAS</a>
+                                    <a class="hoverItem" href="#">VIDEO CAMERAS</a>
+                                    <a class="hoverItem" href="#">PHOTO CAMERAS</a>
                                 </div>
                             </div>
                         </div>
@@ -203,7 +203,7 @@
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseOCThree">
                                 <div class="accordion-body">
-                                    <a href="#">SMARTPHONES</a>
+                                    <a class="hoverItem" href="#">SMARTPHONES</a>
                                 </div>
                             </div>
                         </div>
@@ -218,9 +218,9 @@
                             </h2>
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseOCFour">
-                                <div class="accordion-body">
-                                    <a href="#">TV</a>
-                                    <a href="#">AUDIO DEVICES</a>
+                                <div class="accordion-body d-flex flex-column">
+                                    <a class="hoverItem" href="#">TV</a>
+                                    <a class="hoverItem" href="#">AUDIO DEVICES</a>
                                 </div>
                             </div>
                         </div>
@@ -236,7 +236,7 @@
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseOCFive">
                                 <div class="accordion-body">
-                                    <a href="#">GADGETS</a>
+                                    <a class="hoverItem" href="#">GADGETS</a>
                                 </div>
                             </div>
                         </div>
@@ -251,7 +251,7 @@
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseOCSix">
                                 <div class="accordion-body">
-                                    <a href="#">CAR ELECTRONICS</a>
+                                    <a class="hoverItem" href="#">CAR ELECTRONICS</a>
                                 </div>
                             </div>
                         </div>
@@ -266,9 +266,9 @@
                             </h2>
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseOCSeven">
-                                <div class="accordion-body">
-                                    <a href="#">VIDEO GAMES</a>
-                                    <a href="#">CONSOLES</a>
+                                <div class="accordion-body d-flex flex-column">
+                                    <a class="hoverItem" href="#">VIDEO GAMES</a>
+                                    <a class="hoverItem" href="#">CONSOLES</a>
                                 </div>
                             </div>
                         </div>
@@ -284,7 +284,7 @@
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseOCEight">
                                 <div class="accordion-body">
-                                    <a href="#">SOFTWARE</a>
+                                    <a class="hoverItem" href="#">SOFTWARE</a>
                                 </div>
                             </div>
                         </div>
@@ -300,7 +300,7 @@
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseOCNine">
                                 <div class="accordion-body">
-                                    <a href="#">OFFICE ACCESSORIES</a>
+                                    <a class="hoverItem" href="#">OFFICE ACCESSORIES</a>
                                 </div>
                             </div>
                         </div>
@@ -315,7 +315,7 @@
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseOCTen">
                                 <div class="accordion-body">
-                                    <a href="#">ACCESSORIES</a>
+                                    <a class="hoverItem" href="#">ACCESSORIES</a>
                                 </div>
                             </div>
                         </div>
@@ -465,8 +465,8 @@
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseOne">
                                 <div class="accordion-body d-flex flex-column">
-                                    <a href="#">LAPTOPS</a>
-                                    <a href="#">COMPUTERS</a>
+                                    <a class="hoverItem" href="#">LAPTOPS</a>
+                                    <a class="hoverItem" href="#">COMPUTERS</a>
                                 </div>
                             </div>
                         </div>
@@ -481,8 +481,8 @@
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseTwo">
                                 <div class="accordion-body d-flex flex-column">
-                                    <a href="#">VIDEO CAMERAS</a>
-                                    <a href="#">PHOTO CAMERAS</a>
+                                    <a class="hoverItem" href="#">VIDEO CAMERAS</a>
+                                    <a class="hoverItem" href="#">PHOTO CAMERAS</a>
                                 </div>
                             </div>
                         </div>
@@ -498,7 +498,7 @@
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseThree">
                                 <div class="accordion-body">
-                                    <a href="#">SMARTPHONES</a>
+                                    <a class="hoverItem" href="#">SMARTPHONES</a>
                                 </div>
                             </div>
                         </div>
@@ -513,9 +513,9 @@
                             </h2>
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseFour">
-                                <div class="accordion-body">
-                                    <a href="#">TV</a>
-                                    <a href="#">AUDIO DEVICES</a>
+                                <div class="accordion-body d-flex flex-column">
+                                    <a class="hoverItem" href="#">TV</a>
+                                    <a class="hoverItem" href="#">AUDIO DEVICES</a>
                                 </div>
                             </div>
                         </div>
@@ -531,7 +531,7 @@
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseFive">
                                 <div class="accordion-body">
-                                    <a href="#">GADGETS</a>
+                                    <a class="hoverItem" href="#">GADGETS</a>
                                 </div>
                             </div>
                         </div>
@@ -546,7 +546,7 @@
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseSix">
                                 <div class="accordion-body">
-                                    <a href="#">CAR ELECTRONICS</a>
+                                    <a class="hoverItem" href="#">CAR ELECTRONICS</a>
                                 </div>
                             </div>
                         </div>
@@ -561,9 +561,9 @@
                             </h2>
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseSeven">
-                                <div class="accordion-body">
-                                    <a href="#">VIDEO GAMES</a>
-                                    <a href="#">CONSOLES</a>
+                                <div class="accordion-body d-flex flex-column">
+                                    <a class="hoverItem" href="#">VIDEO GAMES</a>
+                                    <a class="hoverItem" href="#">CONSOLES</a>
                                 </div>
                             </div>
                         </div>
@@ -579,7 +579,7 @@
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseEight">
                                 <div class="accordion-body">
-                                    <a href="#">SOFTWARE</a>
+                                    <a class="hoverItem" href="#">SOFTWARE</a>
                                 </div>
                             </div>
                         </div>
@@ -595,7 +595,7 @@
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseNine">
                                 <div class="accordion-body">
-                                    <a href="#">OFFICE ACCESSORIES</a>
+                                    <a class="hoverItem" href="#">OFFICE ACCESSORIES</a>
                                 </div>
                             </div>
                         </div>
@@ -610,7 +610,7 @@
                             <div class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                                  id="collapseTen">
                                 <div class="accordion-body">
-                                    <a href="#">ACCESSORIES</a>
+                                    <a class="hoverItem" href="#">ACCESSORIES</a>
                                 </div>
                             </div>
                         </div>
@@ -784,20 +784,61 @@
                 <section class="container" id="sectionFilterButton">
                     <article class="row m-5">
                         <div class="col-12 d-flex justify-content-center">
-                            <a aria-controls="offcanvasExample" class="btn d-lg-none normalButton rounded-pill p-3 px-5" data-bs-toggle="offcanvas"
+                            <a aria-controls="offcanvasExample" class="raleway-bold fs-9 btn d-lg-none normalButton rounded-pill p-3 px-5" data-bs-toggle="offcanvas"
                                href="#sectionOCFilter"
                                role="button">
-                                FILTERS
+                                CATEGORIES & FILTERS
                             </a>
                         </div>
                     </article>
                 </section>
                 <section id="sectionMainProducts">
-                    <div class="row m-5">
-                        <div class="col-12">
-                            <h2>SPORT GADGETS</h2>
+                    <article class="row d-flex align-items-center mx-0 my-5">
+                        <div class="col-12 col-lg-2 d-lg-flex text-center text-lg-start mb-4">
+                            <h2 class="raleway-heavy fs-12">SPORT GADGETS</h2>
                         </div>
-                    </div>
+                        <div class="col-12 col-lg-3 text-center text-lg-start mb-4">
+                            <p class="questrial fs-8 m-0">SHOWING <span class="fw-bold">15</span> OF <span class="fw-bold">2358</span> RESULTS</p>
+                        </div>
+                        <div class="col-12 col-lg-2 d-flex justify-content-center mb-4">
+                            <div class="p-0">
+                                <a class="btn border border-1 backgroundColor1 d-flex justify-content-center align-items-center mx-1" style="width: 40px; height: 40px;" href="#">
+                                    <img src="./img/displayicon1.png" alt="displayicon1">
+                                </a>
+                            </div>
+                            <div class="p-0">
+                                <a class="btn border border-1 d-flex justify-content-center align-items-center mx-1" style="width: 40px; height: 40px;" href="#">
+                                    <img src="./img/displayicon2.png" alt="displayicon2">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-3 d-flex justify-content-center mb-4">
+                            <div class="dropdown-center">
+                                <button class="btn dropdown-toggle questrial fs-8 border border-1 rounded-pill" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    MOST POPULAR PRODUCTS
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item questrial fs-8" href="#">Laptops & Computers</a></li>
+                                    <li><a class="dropdown-item questrial fs-8" href="#">Video Games & Consoles</a></li>
+                                    <li><a class="dropdown-item questrial fs-8" href="#">Smartphones</a></li>
+                                    <li><a class="dropdown-item questrial fs-8" href="#">TV & Audio</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-2">
+                            <div class="dropdown-center d-flex justify-content-center justify-content-lg-end mb-3">
+                                <button class="btn dropdown-toggle questrial fs-8 border border-1 rounded-pill" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    SHOW 30
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item questrial fs-8" href="#">30</a></li>
+                                    <li><a class="dropdown-item questrial fs-8" href="#">50</a></li>
+                                    <li><a class="dropdown-item questrial fs-8" href="#">100</a></li>
+                                    <li><a class="dropdown-item questrial fs-8" href="#">200</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </article>
                     <div class="row">
                         <div class="col-12 col-lg-4">
                             <article class="card border-start-0 border-top-0 border-bottom-0 rounded-0 mb-5">
@@ -932,7 +973,7 @@
                             </article>
                         </div>
                     </div>
-                    <article class="row">
+                    <article class="row mt-5">
                         <div class="col-12 d-flex my-5">
                             <div class="col-lg-3 d-none d-lg-flex justify-content-start">
                                 <button class="raleway-bold fs-8 btn whiteButton rounded-pill border border-1 p-3">PREV PAGE</button>
