--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
           rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
     <title>Exzo</title>
-    <script defer src="./js/index.js"></script>
 
 </head>
 <body>
 
+<!--Ik noem dit de Header, het kleine balkje bovenaan de pagina.-->
 <header class="container-fluid border-bottom p-0" id="mainHeader">
     <div class="row mx-1 mx-lg-5">
         <div class="col-12 d-flex" id="contact-info">
@@ -79,6 +79,7 @@
     </div>
 </header>
 
+<!--De navigatie balk onder de header.-->
 <nav class="navbar navbar-expand-lg border-bottom">
     <section class="container-fluid mx-1 mx-lg-5" id="sectionNav">
         <a class="navbar-brand order-1" href="#">
@@ -133,7 +134,9 @@
     </section>
 </nav>
 
+<!--De bulk van de pagina.-->
 <main id="main">
+    <!--Het kleine stukje tekst met de categorie layout bovenaan.-->
     <section class="container" id="sectionCategories">
         <div class="row mt-4 mx-lg-5">
             <div class="col-12 d-flex justify-content-start">
@@ -149,6 +152,7 @@
             </div>
         </div>
     </section>
+    <!--Het offcanvas stuk met categorieën en filters, met een knop als trigger die enkel bij kleinere schermen tevoorschijn komt.-->
     <section aria-labelledby="offcanvasExampleLabel" class="offcanvas offcanvas-start" id="sectionOCFilter"
              tabindex="-1">
         <header class="offcanvas-header">
@@ -448,9 +452,10 @@
             </div>
         </div>
     </section>
+    <!--Hier het hoofdgedeelte van de pagina bij grotere schermen, met de categorieën en filters aan de linkerkant, een carousel, producten layout met filteropties en knopjes voor productpagina browsen eronder.-->
     <section class="container mt-5" id="sectionFilterPlusMain">
         <div class="row mx-lg-5">
-            <section class="col-12 col-lg-3 d-none d-lg-block" id="sectionFilter">
+            <section class="col-12 col-xl-3 d-none d-xl-block" id="sectionFilter">
                 <article class="d-flex flex-column">
                     <h2>POPULAR</h2>
                     <div class="accordion" id="accordion1">
@@ -741,7 +746,7 @@
                     </div>
                 </article>
             </section>
-            <section class="col-12 col-lg-9 mb-5" id="sectionMain">
+            <section class="col-12 col-xl-9 mb-5" id="sectionMain">
                 <section id="sectionMainCarousel">
                     <div class="carousel slide" id="carouselExampleCaptions">
                         <div class="carousel-indicators my-0 my-lg-2">
@@ -784,7 +789,7 @@
                 <section class="container" id="sectionFilterButton">
                     <article class="row m-5">
                         <div class="col-12 d-flex justify-content-center">
-                            <a aria-controls="offcanvasExample" class="raleway-bold fs-9 btn d-lg-none normalButton rounded-pill p-3 px-5" data-bs-toggle="offcanvas"
+                            <a aria-controls="offcanvasExample" class="raleway-bold fs-9 btn d-xl-none normalButton rounded-pill p-3 px-5" data-bs-toggle="offcanvas"
                                href="#sectionOCFilter"
                                role="button">
                                 CATEGORIES & FILTERS
@@ -794,13 +799,13 @@
                 </section>
                 <section id="sectionMainProducts">
                     <article class="row d-flex align-items-center mx-0 my-5">
-                        <div class="col-12 col-lg-2 d-lg-flex text-center text-lg-start mb-4">
-                            <h2 class="raleway-heavy fs-12">SPORT GADGETS</h2>
+                        <div class="col-12 col-lg-2 d-lg-flex text-center text-lg-start align-items-center p-0 mb-4 mb-lg-0">
+                            <h2 class="raleway-heavy fs-11 p-0 m-0">SPORT GADGETS</h2>
                         </div>
-                        <div class="col-12 col-lg-3 text-center text-lg-start mb-4">
+                        <div class="col-12 col-lg-3 text-center p-0 mb-4 mb-lg-0">
                             <p class="questrial fs-8 m-0">SHOWING <span class="fw-bold">15</span> OF <span class="fw-bold">2358</span> RESULTS</p>
                         </div>
-                        <div class="col-12 col-lg-2 d-flex justify-content-center mb-4">
+                        <div class="col-12 col-lg-2 d-flex justify-content-center p-0 mb-4 mb-lg-0">
                             <div class="p-0">
                                 <a class="btn border border-1 backgroundColor1 d-flex justify-content-center align-items-center mx-1" style="width: 40px; height: 40px;" href="#">
                                     <img src="./img/displayicon1.png" alt="displayicon1">
@@ -812,7 +817,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-12 col-lg-3 d-flex justify-content-center mb-4">
+                        <div class="col-12 col-lg-3 d-flex justify-content-center p-0 mb-4 mb-lg-0">
                             <div class="dropdown-center">
                                 <button class="btn dropdown-toggle questrial fs-8 border border-1 rounded-pill" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     MOST POPULAR PRODUCTS
@@ -825,8 +830,8 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-12 col-lg-2">
-                            <div class="dropdown-center d-flex justify-content-center justify-content-lg-end mb-3">
+                        <div class="col-12 col-lg-2 d-flex justify-content-center justify-content-lg-end p-0 mb-3 mb-lg-0">
+                            <div class="dropdown-center">
                                 <button class="btn dropdown-toggle questrial fs-8 border border-1 rounded-pill" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     SHOW 30
                                 </button>
@@ -995,10 +1000,10 @@
             </section>
             <section id="sectionSmallProducts">
                 <div class="row mt-4 mb-5">
-                    <article class="col-12 col-lg-3">
+                    <article class="col-12 col-lg-6 col-xl-3 d-flex flex-column">
                         <h2 class="raleway-heavy fs-12 my-4 text-center">HOT SALE</h2>
                         <div class="card border border-0 my-2">
-                            <div class="card-body d-flex p-0">
+                            <div class="col-6 col-lg-12 offset-3 offset-lg-0 card-body d-flex p-0">
                                 <div class="border border-1 me-3">
                                     <img alt="tech-sm-wireless-hp" src="./img/smimage1.png">
                                 </div>
@@ -1013,7 +1018,7 @@
                             </div>
                         </div>
                         <div class="card border border-0 my-2">
-                            <div class="card-body d-flex p-0">
+                            <div class="col-6 col-lg-12 offset-3 offset-lg-0 card-body d-flex p-0">
                                 <div class="border border-1 me-3">
                                     <img alt="tech-sm-earphonescase" src="./img/smimage2.png">
                                 </div>
@@ -1028,7 +1033,7 @@
                             </div>
                         </div>
                         <div class="card border border-0 my-2">
-                            <div class="card-body d-flex p-0">
+                            <div class="col-6 col-lg-12 offset-3 offset-lg-0 card-body d-flex p-0">
                                 <div class="border border-1 me-3">
                                     <img alt="tech-sm-wireless-hp" src="./img/smimage3.png">
                                 </div>
@@ -1043,10 +1048,10 @@
                             </div>
                         </div>
                     </article>
-                    <article class="col-12 col-lg-3">
+                    <article class="col-12 col-lg-6 col-xl-3 d-flex flex-column">
                         <h2 class="raleway-heavy fs-12 my-4 text-center">TOP RATED</h2>
                         <div class="card border border-0 my-2">
-                            <div class="card-body d-flex p-0">
+                            <div class="col-6 col-lg-12 offset-3 offset-lg-0 card-body d-flex p-0">
                                 <div class="border border-1 me-3">
                                     <img alt="tech-sm-wireless-hp" src="./img/smimage1.png">
                                 </div>
@@ -1061,7 +1066,7 @@
                             </div>
                         </div>
                         <div class="card border border-0 my-2">
-                            <div class="card-body d-flex p-0">
+                            <div class="col-6 col-lg-12 offset-3 offset-lg-0 card-body d-flex p-0">
                                 <div class="border border-1 me-3">
                                     <img alt="tech-sm-wireless-hp" src="./img/smimage1.png">
                                 </div>
@@ -1076,7 +1081,7 @@
                             </div>
                         </div>
                         <div class="card border border-0 my-2">
-                            <div class="card-body d-flex p-0">
+                            <div class="col-6 col-lg-12 offset-3 offset-lg-0 card-body d-flex p-0">
                                 <div class="border border-1 me-3">
                                     <img alt="tech-sm-wireless-hp" src="./img/smimage1.png">
                                 </div>
@@ -1091,10 +1096,10 @@
                             </div>
                         </div>
                     </article>
-                    <article class="col-12 col-lg-3">
+                    <article class="col-12 col-lg-6 col-xl-3 d-flex flex-column">
                         <h2 class="raleway-heavy fs-12 my-4 text-center">POPULAR</h2>
                         <div class="card border border-0 my-2">
-                            <div class="card-body d-flex p-0">
+                            <div class="col-6 col-lg-12 offset-3 offset-lg-0 card-body d-flex p-0">
                                 <div class="border border-1 me-3">
                                     <img alt="tech-sm-wireless-hp" src="./img/smimage1.png">
                                 </div>
@@ -1109,7 +1114,7 @@
                             </div>
                         </div>
                         <div class="card border border-0 my-2">
-                            <div class="card-body d-flex p-0">
+                            <div class="col-6 col-lg-12 offset-3 offset-lg-0 card-body d-flex p-0">
                                 <div class="border border-1 me-3">
                                     <img alt="tech-sm-wireless-hp" src="./img/smimage1.png">
                                 </div>
@@ -1124,7 +1129,7 @@
                             </div>
                         </div>
                         <div class="card border border-0 my-2">
-                            <div class="card-body d-flex p-0">
+                            <div class="col-6 col-lg-12 offset-3 offset-lg-0 card-body d-flex p-0">
                                 <div class="border border-1 me-3">
                                     <img alt="tech-sm-wireless-hp" src="./img/smimage1.png">
                                 </div>
@@ -1139,10 +1144,10 @@
                             </div>
                         </div>
                     </article>
-                    <article class="col-12 col-lg-3">
+                    <article class="col-12 col-lg-6 col-xl-3 d-flex flex-column">
                         <h2 class="raleway-heavy fs-12 my-4 text-center">BEST CHOICE</h2>
                         <div class="card border border-0 my-2">
-                            <div class="card-body d-flex p-0">
+                            <div class="col-6 col-lg-12 offset-3 offset-lg-0 card-body d-flex p-0">
                                 <div class="border border-1 me-3">
                                     <img alt="tech-sm-wireless-hp" src="./img/smimage1.png">
                                 </div>
@@ -1157,7 +1162,7 @@
                             </div>
                         </div>
                         <div class="card border border-0 my-2">
-                            <div class="card-body d-flex p-0">
+                            <div class="col-6 col-lg-12 offset-3 offset-lg-0 card-body d-flex p-0">
                                 <div class="border border-1 me-3">
                                     <img alt="tech-sm-wireless-hp" src="./img/smimage1.png">
                                 </div>
@@ -1172,7 +1177,7 @@
                             </div>
                         </div>
                         <div class="card border border-0 my-2">
-                            <div class="card-body d-flex p-0">
+                            <div class="col-6 col-lg-12 offset-3 offset-lg-0 card-body d-flex p-0">
                                 <div class="border border-1 me-3">
                                     <img alt="tech-sm-wireless-hp" src="./img/smimage1.png">
                                 </div>
@@ -1191,6 +1196,7 @@
             </section>
         </div>
     </section>
+    <!--De groene balk met hierin wat tekst en een email inputveld.-->
     <section class="container-fluid py-5 mt-5 backgroundColor1" id="sectionEmail">
         <div class="container">
             <div class="row mx-5">
@@ -1220,7 +1226,8 @@
             </div>
         </div>
     </section>
-    <section class="container-fluid bg-dark" id="sectionBottom">
+    <!--De grijze sectie onderaan met wat extra info.-->
+    <section class="container-fluid backgroundColor2" id="sectionBottom">
         <div class="container">
             <div class="row py-5 mx-5">
                 <article class="col-12 col-lg-3 d-flex flex-column mb-5 mb-lg-0">
@@ -1347,8 +1354,10 @@
         </div>
     </section>
 </main>
+
+<!--Tot slot de footer helemaal onderin, met trademark, social media links en de betalingsmogelijkheden.-->
 <footer>
-    <section class="container-fluid bg-dark" id="sectionFooter">
+    <section class="container-fluid backgroundColor2" id="sectionFooter">
         <div class="container">
             <div class="row mx-5 py-4 border-top border-light">
                 <article class="col-12 d-flex flex-column flex-lg-row align-items-center">
@@ -1401,13 +1410,12 @@
     </section>
 </footer>
 
-
+<!--Ik gebruik een klein beetje javascript voor wat extra netheid in bepaalde elementen.-->
 <script>
     // De navbar laten meescrollen met de rest van de pagina.
     const navbar = document.querySelector('.navbar');
     const header = document.querySelector('#mainHeader');
 
-    // Voeg een event listener toe voor het scrollen van de navbar.
     window.addEventListener('scroll', function () {
         if (window.scrollY > 50) {
             navbar.classList.add('scrolled');
@@ -1418,17 +1426,17 @@
         }
     });
 
-    // Functie voor het aanpassen van de prijs in de prijs filter slider.
+    // Functie voor het aanpassen van de prijstekst in de prijs filter slider.
     function updatePrice(value) {
         document.getElementById('priceValue').textContent = value;
         document.getElementById('priceValue2').textContent = value;
     }
 
-    // Toggle selected button
+    // Javascript Code voor een kleine rode rand rond de kleur filter opties in de filtergedeeltes van de pagina.
     document.querySelectorAll('.btn-group .btn').forEach(button => {
         button.addEventListener('click', () => {
             document.querySelectorAll('.btn-group .btn').forEach(btn => btn.style.border = 'none');
-            button.style.border = '2px solid red'; // Highlight selected button
+            button.style.border = '2px solid red';
         });
     });
 
