final final version

--- a/index.html
+++ b/index.html
@@ -807,12 +807,12 @@
                         </div>
                         <div class="col-12 col-lg-2 d-flex justify-content-center p-0 mb-4 mb-lg-0">
                             <div class="p-0">
-                                <a class="btn border border-1 backgroundColor1 d-flex justify-content-center align-items-center mx-1" style="width: 40px; height: 40px;" href="#">
+                                <a class="border border-1 rounded-1 backgroundColor1 d-flex justify-content-center align-items-center mx-1" style="width: 40px; height: 40px;" href="#">
                                     <img src="./img/displayicon1.png" alt="displayicon1">
                                 </a>
                             </div>
                             <div class="p-0">
-                                <a class="btn border border-1 d-flex justify-content-center align-items-center mx-1" style="width: 40px; height: 40px;" href="#">
+                                <a class="border border-1 rounded-1 d-flex justify-content-center align-items-center mx-1" style="width: 40px; height: 40px;" href="#">
                                     <img src="./img/displayicon2.png" alt="displayicon2">
                                 </a>
                             </div>
